--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "react-bootstrap": "^0.31.0",
+    "react-bootstrap-modal": "^3.0.1"
   }
 }
