--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "prop-types": "^15.5.10",
     "react-bootstrap": "^0.31.0",
-    "react-bootstrap-modal": "^3.0.1"
+    "react-bootstrap-modal": "^3.0.1",
+    "react-bootstrap-switch": "^15.5.0-a",
+    "react-dropzone": "^3.13.1",
+    "react-image-lightbox": "^3.4.3",
+    "superagent": "^3.5.2"
   }
 }
