--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-datetime": "^2.8.10",
     "react-dom": "^15.6.1",
     "react-dropzone": "^3.13.1",
+    "react-google-maps": "^7.2.0",
+    "react-helmet": "^5.1.3",
     "react-image-lightbox": "^3.4.3",
     "react-router": "^3.0.5",
     "react-router-dom": "^4.1.2",
